Fix Objects.nonNull/requireNonNullElse and Comparator.naturalOrder NoSuchMethodError on iOS via bytecode rewriting
Co-authored-by: cgc <1276728+cgc@users.noreply.github.com>